[package]
name = "calorie-counter"
description = "A simple calorie counter"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Jerome"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
chrono = "=0.4"
clap = { version = "=3.1.12", features = ["derive"] }
